5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_1333.log
== TEST (2019-03-13 22:41:09) 
-- CODE:
expressao = 
print(30 - 9 + 8 // 90 )
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:41:39) 
-- CODE:
expressao = 30 - 9 + 8 // 90 
print()
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:42:51) 
-- CODE:
expressao = 29 // 90 
print()
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:43:04) 
-- CODE:
expressao = 90 //  29
print()
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:43:18) 
-- CODE:
expressao =( 90 //  29)
print()
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:44:00) 
-- CODE:
expressao =(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
print()
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:44:19) 
-- CODE:
expressao =(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:44:23) 
-- CODE:
expressao =(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.190001
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:18:45) 
-- CODE:
expressao =(30 - 3 ** 2 + 8 / 3 ** 2 * 10)
print(expressao)
-- OUTPUT:
29.88888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:18:47) 
-- CODE:
expressao =(30 - 3 ** 2 + 8 / 3 ** 2 * 10)
print(expressao)
-- EXECUTION TIME:
0.173701
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
29.88888888888889
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:19:09) 
-- CODE:
expressao=(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:19:10) 
-- CODE:
expressao=(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)
-- EXECUTION TIME:
0.169476
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:20:37) 
-- CODE:
expressao=("30 - 3 ** 2 + 8 // 3 ** 2 * 10")
print(expressao)
-- OUTPUT:
30 - 3 ** 2 + 8 // 3 ** 2 * 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:21:27) 
-- CODE:
print("30 - 3 ** 2 + 8 // 3 ** 2 * 10")
-- OUTPUT:
30 - 3 ** 2 + 8 // 3 ** 2 * 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:21:39) 
-- CODE:
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:21:41) 
-- CODE:
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.189666
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
